# disk_subsystem_modeling

./: .gitignore  CMakeLists.txt  README.md
include/: fifo.h  fscan.h  input_data.h  memreq.h  sim_info.h
output/: fifo_tmax.txt  fifo_tmax_div_10.txt  fifo_tmax_div_100.txt  fscan_tmax.txt  fscan_tmax_div_10.txt  fscan_tmax_div_100.txt
src/: fifo.c  fscan.c  main  main.c  memreq.c
